@@ -1,0 +1,11 @@
+Import('env')
+
+env.Prepend(LIBS = 'ggenerator')
+
+sources = Split("""
+	GPrimaryGeneratorAction.cc
+	""")
+
+env.Library(source = sources, target = "#lib/ggenerator")
+
+
